Updates Facts and History monogram in Global Nav.

--- a/app/views/omni_nav_v2/_global_nav.html.erb
+++ b/app/views/omni_nav_v2/_global_nav.html.erb
@@ -10,7 +10,7 @@
             <li><a class="icon icon-california" href="/about/visit-chapman/index.aspx">Visit Chapman</a></li>
             <li><a class="icon icon-cu-window" href="/discover/index.html">Discover Chapman</a></li>
             <li><a class="icon icon-office" href="/about/campus/index.aspx">Our Campus</a></li>
-            <li><a class="icon icon-cu-window" href="/about/facts-history/index.aspx">Facts and History</a></li>
+            <li><a class="icon icon-library4" href="/about/facts-history/index.aspx">Facts and History</a></li>
             <li><a class="icon icon-cu-window" href="/about/administration/index.aspx">Administration</a></li>
             <li><a class="icon icon-envelop" href="/about/contact-us.aspx">Contact Us</a></li>
           </ul>
