--- a/app/views/widgets/shared/_header.html
+++ b/app/views/widgets/shared/_header.html
@@ -21,7 +21,7 @@
                             </li>
                             <li><a class="icon icon-office" href="../../about/campus/index.aspx">Our Campus</a>
                             </li>
-                            <li><a class="icon icon-cu-window" href="../../about/facts-history/index.aspx">Facts and History</a>
+                            <li><a class="icon icon-library4" href="../../about/facts-history/index.aspx">Facts and History</a>
                             </li>
                             <li><a class="icon icon-cu-window" href="../../about/administration/index.aspx">Administration</a>
                             </li>
