Changed Faculty to Faculty Directory.

--- a/app/views/widgets/shared/_header.html
+++ b/app/views/widgets/shared/_header.html
@@ -39,7 +39,7 @@
                             </li>
                             <li><a class="icon icon-calendar4" href="../../academics/academic-calendar.aspx">Academic Calendar</a>
                             </li>
-                            <li><a class="icon icon-profile" href="../../our-faculty/index/aspx">Faculty</a>
+                            <li><a class="icon icon-profile" href="../../our-faculty/index/aspx">Faculty Directory</a>
                             </li>
                             <li><a class="icon icon-books" href="../../academics/libraries/index.aspx">Libraries</a>
                             </li>
